--- a/kemik-web/src/index.css
+++ b/kemik-web/src/index.css
@@ -3,3 +3,41 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+button {
+  margin: 5px;
+  border-radius: 20px !important;
+  background: aliceblue;
+}
+
+button[value="POSITIVE"] {
+  color: green
+}
+
+button[value="NOTR"] {
+  color: black
+}
+
+button[value="NEGATIVE"] {
+  color: red
+}
+
+button[value="FREE"] {
+  color: cornflowerblue
+}
+
+button[value="BOT"] {
+  color: darkslateblue
+}
+
+#buttonsWrapper {
+  position: fixed;
+  
+  top: 50%;
+  left: 50%;
+  margin-left: -182px;
+}
+
+.container {
+  margin-top: 20px;
+}
